# bevy_motion_matching

./: Cargo.toml
shaders/: checkerboard.fs  checkerboard.vs
src/: main.rs
src/components/: camera.rs  diagnostics.rs  fps.rs  mod.rs  player.rs  spring.rs
src/entities/: diagnostics.rs  mod.rs
src/scenes/: main_scene.rs  mod.rs  trigger_viz.rs
src/systems/: camera.rs  damped_spring.rs  diagnostics.rs  fps.rs  graphic.rs  mod.rs  trigger_position.rs
